--- a/srcs/.env
+++ b/srcs/.env
@@ -1,15 +1,15 @@
 DOMAIN_NAME=motroian.42.fr
 
-SQL_DATABASE=inception
-SQL_USER=dbuser
-SQL_PASSWORD=root
-SQL_ROOT_PASSWORD=root
-SQL_HOST=mariadb:3306
+MYSQL_HOSTNAME=mariadb
+MYSQL_DATABASE=wordpress
+MYSQL_USER=motroian
+MYSQL_PASSWORD=qwerty1234
+MYSQL_ROOT_PASSWORD=qwerty4321
 
-SITE_TITLE=Inception
-ADMIN_USER=hello
-ADMIN_PASSWORD=root
-# ADMIN_EMAIL=motroian_admin@example.com
-USER1_LOGIN=motroian_test8
-# USER1_MAIL=motroian_user@example.com
-USER1_PASS=root
+WP_TITLE=inception
+WP_ADMIN=supervisor
+WP_USER=jmastora
+WP_USER_MAIL=moussatroiano@gmail.com
+WP_ADMIN_MAIL=hambrin@hotmail.fr
+WP_USER_PASSWD=0987654321
+WP_ADMIN_PASSWD=1234567890
