--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,82 +1,54 @@
-version: '3'
-
+version:  '3'
 services:
-  mariadb:
-    image: mariadb
-    container_name: mariadb
-    build:
-      context: ./requirements/mariadb
-      dockerfile: Dockerfile
-    volumes:
-      - mariadb:/var/lib/mysql
-    expose:
-      - "3306"
-    networks:
-      - inception
-    restart: unless-stopped
-    env_file: .env
-    healthcheck:
-      test: mysqladmin ping --host=localhost -p${SQL_ROOT_PASSWORD}
-      interval: 5s
-      timeout: 1s
-      retries: 20
-      start_period: 5s
-
-  wordpress:
-    image: wordpress
-    container_name: wordpress
-    build:
-      context: ./requirements/wordpress
-      dockerfile: Dockerfile
-    volumes:
-      - wordpress:/var/www/html/wordpress
-    expose:
-      - "9000"
-    networks:
-      - inception
-    restart: unless-stopped
-    env_file: .env
-    depends_on:
-      mariadb:
-        condition: service_healthy    
-
-  nginx:
-    image: nginx
-    container_name: nginx
-    build:
-      context: ./requirements/nginx
-      dockerfile: Dockerfile	
-    volumes:
-      - wordpress:/var/www/html/wordpress
-    depends_on:
-      - wordpress
-    ports:
-      - "443:443"
-    networks:
-      - inception
-    restart: unless-stopped
-    env_file: .env
-    healthcheck:
-      test: 'curl -kfsSL https://localhost:443/status'
-      interval: 5s
-      timeout: 1s
-      retries: 10
-      start_period: 5s
-
+    nginx:
+      depends_on:
+        - wordpress
+      container_name: nginx
+      build: ./requirements/nginx
+      volumes:
+        - wordpress-vol:/var/www/html
+      ports:
+        - "443:443"
+      networks:
+        - network
+      restart: always
+    wordpress:
+      depends_on:
+        - mariadb
+      container_name: wordpress
+      build: ./requirements/wordpress
+      env_file:
+        - .env
+      networks:
+        - network
+      volumes:
+        - wordpress-vol:/var/www/html
+      restart: always
+    mariadb:
+          container_name: mariadb
+          env_file:
+            - .env
+          build: ./requirements/mariadb
+          networks:
+            - network
+          volumes:
+            - mariadb-vol:/var/lib/mysql
+          restart: always
 volumes:
-  mariadb:
+  mariadb-vol:
     driver: local
+    name : mariadb-vol
     driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: '/home/yatang/data/mariadb'
-  wordpress:
+      type: none
+      device: /home/motroian/data/mariadb
+      o: bind
+  wordpress-vol:
     driver: local
+    name : wordpress-vol
     driver_opts:
-      type: 'none'
-      o: 'bind'
-      device: '/home/yatang/data/wordpress'
-
+      type: none
+      device: /home/motroian/data/wordpress
+      o: bind
 networks:
-  inception:
-    name: inception
+  network:
+    driver: bridge
