--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -1,16 +1,17 @@
 FROM debian:buster
 
-# install NGINX and other dependencies
-RUN apt-get update -y 
-RUN apt-get install -y nginx
-RUN apt-get install -y vim
-RUN apt-get install -y curl
-RUN mkdir -p /etc/nginx/ssl
-RUN apt-get install -y openssl
+RUN		apt-get update && apt-get install -y nginx \
+    openssl
 
-# 1)create a directory to store certificates and keys 2)generate the keys
-RUN openssl req -x509 -nodes -out /etc/nginx/ssl/inception.crt -keyout /etc/nginx/ssl/inception.key -subj "/C=FR/ST=IDF/L=Paris/O=42/OU=42/CN=yatang.42.fr/UID=yatang"
+COPY    conf/nginx.conf /etc/nginx/conf.d/default.conf
 
-# copy the provided config file to the container
-RUN mkdir -p /var/run/nginx
-COPY ./conf/nginx.conf /etc/nginx/nginx.conf
+RUN     openssl req -newkey rsa:4096 -x509 -sha256 -days 365 -nodes \
+    -out /etc/ssl/motroian.42.fr.pem  \
+    -keyout /etc/ssl/motroian.42.fr.key \
+    -subj "/C=FR/ST=Paris/L=Paris/O=42 School/OU=motroian/CN=motroian.42.fr"
+
+RUN mkdir -p /run/nginx
+
+EXPOSE  443
+
+CMD     ["nginx", "-g", "daemon off;"]
