--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -1,31 +1,33 @@
 FROM debian:buster
 
-RUN apt-get update -y
-RUN apt-get upgrade -y
-RUN apt-get install -y wget
-RUN apt-get install -y php7.3 php-fpm php-mysql
+RUN apt-get update && apt-get install -y curl \
+    php7.3 \
+    php7.3-fpm \
+    php7.3-mysql \
+    php7.3-common \
+    mariadb-client \
+    sendmail \
+    wget
 
-# a command-line interface for WordPress, you can manage WordPress once it's downloaded
-RUN wget https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
-	&& chmod +x wp-cli.phar \
-	&& mv wp-cli.phar /usr/local/bin/wp
+RUN curl -O https://raw.githubusercontent.com/wp-cli/builds/gh-pages/phar/wp-cli.phar \
+        && chmod +x wp-cli.phar \
+        && mv wp-cli.phar /usr/local/bin/wp
 
-RUN apt-get update && apt-get install -y default-mysql-client
-RUN apt-get install -y mariadb-client
-RUN wget https://wordpress.org/wordpress-6.1.1.tar.gz -P /var/www/html
-RUN cd /var/www/html \
-	&& tar -xzf /var/www/html/wordpress-6.1.1.tar.gz \
-	&& rm /var/www/html/wordpress-6.1.1.tar.gz
+RUN mkdir -p /var/www/html \
+        && chown -R www-data:www-data /var/www/html
 
-# ensure that the web server(nginx) has the necessary permissions to read and execute the files within the web root directory
-RUN chown -R www-data:www-data /var/www/*
-RUN chmod -R 755 /var/www/*
+RUN chmod -R 755 /var/www/html
+
+COPY conf/www.conf /etc/php/7.3/fpm/pool.d/www.conf
+
+COPY tools/wpscript.sh /var/www/wpscript.sh
+
+RUN chmod +x /var/www/wpscript.sh
+
+RUN mkdir -p /run/php
+
+WORKDIR /var/www/html
 
 EXPOSE 9000
 
-COPY ./tools/wpscript.sh ./
-RUN chmod +x ./wpscript.sh
-
-COPY ./tools/www.conf /etc/php/7.3/fpm/pool.d/www.conf
-
-ENTRYPOINT ["bash", "./wpscript.sh"]
+CMD ["/var/www/wpscript.sh"]
